2005-12-31	Jonathon Jongsma	<jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: updated section on prepackaged gtkmm
	binaries for linux distributions

2006-01-07  Michael J M Thomson  <mjmt@internode.on.net>

	* gtk/gtkmm.h: Include menutoolbutton.h and tearoffmenuitem.h.

2006-01-04  Cedric Gustin <cedric.gustin@gmail.com>

	* gtk/src/Makefile_list_of_hg.am_fragment: Moved plug.hg and
	socket.hg from files_posix_hg to files_general_hg as both GtkPlug
	and GtkSocket are now supported on win32.

2005-12-20  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/container.ccg:
	* gtk/src/container.hg: Use custom_c_callback option 
	with _WRAP_SIGNAL for the remove signal, so we can 
	provide a custom signal callback (as well as the existing 
	custom default signal callback). This allows us to 
	check for already-deleted children in connected signal handler 
	callbacks as well as the default signal handler. This should 
	be a partial fix for bug #315874 from Philip Langdale.

2005-12-21  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/texttagtable.ccg: Put a private class in a 
	anonymous namespace, theoretically to prevent it being 
	exported as ABI.

2.8.2:

2005-12-14  Philip Langdale  <plangdale@vmware.com>

	* gdk/src/window.hg:
	* tools/m4/convert_gdk.m4: Correct the Cursor 
	conversion - it does not need to be copied/leaked. 
	Bug #323920.

2005-12-10  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/expander.hg: Add documentation, base on the 
	C documentation, mentioning property_expanded().signal_changed().

2005-12-06  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* Makefile.am:
	* configure.in: add configure option for enabling / disabling building of
	documentation (--enable-docs / --disable-docs)

2005-12-06   Jonathon Jongsma <jonathon.jongsma@gmail.com>

	* configure.in: Look for gmmproc in generic libdir 
	directory, because that is not always lib/. This 
	fixes the build on some 64-bit systems.
