@@ -1500,9 +1500,17 @@ space if necessary. For instance, this would allow you to display a photograph w
 <sect3>
 <title>Example</title>
 <para>
-The following program uses a <literal>Gtk::AspectFrame</literal> to present a drawing area whose aspect ratio will always be 2:1, no matter how the user resizes the top-level window.</para>
+    The following program uses a <literal>Gtk::AspectFrame</literal> to present a
+    drawing area whose aspect ratio will always be 2:1, no matter how the user
+    resizes the top-level window.
+</para>
 
-<para>TODO: screenshot</para>
+<figure id="figure-aspectframe">
+  <title>AspectFrame</title>
+  <screenshot>
+    <graphic format="PNG" fileref="&url_figures_base;aspectframe.png"/>
+  </screenshot>
+</figure>
 
 <para><ulink url="&url_examples_base;aspectframe">Source Code</ulink></para>
 </sect3>
