@@ -1,3 +1,8 @@
+2005-12-31  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
+
+	* docs/tutorial/gtkmm-tut.xml: Add screenshot for the aspectframe example.
+	The screenshot was already in CVS, just not linked from the tutorial.
+
 2005-12-31	Jonathon Jongsma	<jonathon.jongsma@gmail.com>
 
 	* docs/tutorial/gtkmm-tut.xml: updated section on prepackaged gtkmm
